move BibTeX files to correct directories (#12)
* move BibTeX files to correct directories

Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>

* style: apply pre-commit fixes

* write before format

* style: apply pre-commit fixes

---------

Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>
Co-authored-by: njzjz <njzjz@users.noreply.github.com>

--- a/article/JChemPhys/Zeng_JChemPhys_2023_v159_p054801.bib
+++ b/article/JChemPhys/Zeng_JChemPhys_2023_v159_p054801.bib
@@ -17,7 +17,7 @@
   journal      = {J. Chem. Phys.},
   volume       = 159,
   number       = 5,
-  pages        = 054801,
+  pages        = {054801},
   doi          = {10.1063/5.0155600},
   abstract     = {
     DeePMD-kit is a powerful open-source software package that facilitates
